lox-tests/tests/constructor/missing_arguments.stderr
ERROR: Expected 2 arguments in function call but got 1
 --> 8:11
  |
8 | var foo = Foo(1); // expect runtime error: Expected 2 arguments but got 1.
  |           ^----^
